# beacon-io

./: .gitignore  CITATION.cff  LICENSE  README.md  Snakefile  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
data/: README.md
manuscript/: TableS1_EDD_significant.csv  TableS2_DifferentialEDD.csv  TableS3_PRISM_drug_hits.csv  TableS4_TCGA_survival.csv  TableS5_Evidence_table.csv  TableS6_Data_sources.csv  cover_letter.tex  main.tex  references.bib
scripts/: 01_download_data.py  02_beacon_edd.py  03_immune_context.py  04_combination_targets.py  05_clinical_validation.py  06_singlecell.py  07_integration.py  generate_figures.py
src/beacon_io/: __init__.py  config.py  engine.py  utils.py
src/clinical/: validation.py
src/combination/: drug_sensitivity.py
src/data/: depmap.py  icb_cohorts.py  tcga.py
src/immune/: beacon_immune.py  deconvolution.py
src/integration/: evidence.py
src/singlecell/: resolution.py
